@@ -8,6 +8,9 @@
 09/15/2018
 - add an option to disable nonce parameter for broken OpenID Connect providers
 
+09/14/2018
+- deprecate `opt.secret` in favor of `opts.public_key` and `opts.symmetric_key`
+
 09/06/2018
 - bypass introspection cache on demand with introspection_cache_ignore; thanks @dmitriyblok
 
